# bahmni-copilot

./: .gitignore  .pre-commit-config.yaml  .talismanrc  README.md
.github/workflows/: backend-publish.yml  frontend-publish.yml  publish.yml
backend/: Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  departments.py  fields.py  forms.py  patients.py  providers.py  root.py  transcriptions.py  users.py
backend/app/config/: database.py
backend/app/core/: emr_client.py
backend/app/models/: departments.py  fields.py  forms.py  providers.py  transcriptions.py  users.py
backend/app/schemas/: auth.py  departments.py  fields.py  forms.py  patients.py  providers.py  transcriptions.py  users.py
backend/app/services/: auth.py  departments.py  fields.py  forms.py  patients.py  providers.py  transcriptions.py  users.py
backend/app/utils/: openai.py  s3.py
backend/test/: test_auth.py  test_departments.py  test_emr_client.py  test_fields.py  test_forms.py  test_openai_helper.py  test_patients.py  test_providers.py  test_root.py  test_s3_utils.py  test_transcriptions.py  test_users.py
backend/test/api/routes/: test_auth.py  test_fields.py  test_forms.py  test_users.py
frontend/: .gitignore  .prettierrc.cjs  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: entry.server.tsx  root.tsx
frontend/app/routes/: _index.tsx
tools/: pre-commit-hooks-setup.sh
