[tool.poetry]
name = "bahmni-copilot-backend"
version = "0.1.0"
description = "Bahmni Copilot is an AI-powered system integrated with Bahmni, an open-source EMR (Electronic Medical Record) system. This project leverages speech-to-text technology and Open AI models to enhance the user experience by automating form filling based on the transcribed speech of the user. The goal is to make form data entry easier, faster, and more intuitive by utilizing the transcription as context for populating fields in forms."
authors = ["Rahul Ramesh"]
readme = "README.md"

[tool.black]
line-length = 120